<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button_insert"
        android:theme="@style/buttons_style"
        android:layout_width="@dimen/buttons_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/button_insert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_remove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_edit_text"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/button_remove"
        android:theme="@style/buttons_style"
        android:layout_width="@dimen/buttons_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/button_remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_insert"
        app:layout_constraintTop_toBottomOf="@+id/word_edit_text"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/button_search"
        android:theme="@style/buttons_style"
        android:layout_width="@dimen/buttons_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/button_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_remove"
        app:layout_constraintTop_toBottomOf="@+id/word_edit_text"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/label_dict_size"
        style="@style/labels_style"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/label_dict_size"
        app:layout_constraintBottom_toTopOf="@+id/word_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/label_tree_height"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dict_size_counter"
        style="@style/counter_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_dict_size"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/word_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/label_dict_size"
        app:layout_constraintStart_toStartOf="@+id/label_dict_size"
        app:layout_constraintTop_toBottomOf="@+id/label_dict_size"
        app:layout_constraintVertical_bias="0.13999999"
        tools:text="5" />

    <TextView
        android:id="@+id/label_tree_height"
        style="@style/labels_style"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/label_tree_height"
        app:layout_constraintBottom_toTopOf="@+id/word_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_dict_size"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tree_height_counter"
        style="@style/counter_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/label_tree_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/word_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/label_tree_height"
        app:layout_constraintStart_toStartOf="@+id/label_tree_height"
        app:layout_constraintTop_toBottomOf="@+id/label_tree_height"
        app:layout_constraintVertical_bias="0.13999999"
        tools:text="2" />

    <EditText
        android:id="@+id/word_edit_text"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_word_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>